--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+
 # compiled output
 /dist
 /tmp
@@ -37,3 +38,6 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+
+# Firebase ENV variables
+apps/agromanager/src/environments/firebase.ts
