Edited and regenerated API key Note: DO NOT SHOW API KEY on github

--- a/apps/agromanager/tsconfig.compodoc.json
+++ b/apps/agromanager/tsconfig.compodoc.json
@@ -1,7 +1,8 @@
 {
-  "extends": "./tsconfig.app.json",
-  "include": [
-    "../../apps/**/*.ts",
-    "../../libs/**/*.ts"
-  ]
+	"extends": "./tsconfig.app.json",
+	"include": [
+		"../../apps/**/*.ts",
+		"../../libs/**/*.ts"
+	] /* ,
+	"exclude": ["/apps/agromanager/src/environments/**"] */
 }
