--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"@angular/flex-layout": "^10.0.0-beta.32",
 		"@angular/language-service": "^10.0.0",
 		"@angular/material": "^10.1.3",
+		"@compodoc/compodoc": "^1.1.11",
 		"@nrwl/angular": "^10.1.0",
 		"@nrwl/cypress": "10.1.0",
 		"@nrwl/eslint-plugin-nx": "10.1.0",
@@ -68,11 +69,11 @@
 		"jest": "26.2.2",
 		"jest-preset-angular": "8.2.1",
 		"material-design-icons": "^3.0.1",
+		"ngx-auth-firebaseui": "^4.4.0",
 		"prettier": "2.0.4",
 		"ts-jest": "26.1.4",
 		"ts-node": "~7.0.0",
 		"tslint": "~6.0.0",
-		"typescript": "~3.9.3",
-		"@compodoc/compodoc": "^1.1.11"
+		"typescript": "~3.9.3"
 	}
 }
