Worked on the login Worked on the header

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"test": "nx test",
 		"lint": "nx workspace-lint && nx lint",
 		"e2e": "nx e2e",
-		"compodoc": "npx compodoc -p tsconfig.base.json -w -s --includes ./tools/schematics/additional-documentation",
+		"compodoc": "npx compodoc -p tsconfig.base.json -w -s",
 		"affected:apps": "nx affected:apps",
 		"affected:libs": "nx affected:libs",
 		"affected:build": "nx affected:build",
@@ -69,7 +69,6 @@
 		"jest": "26.2.2",
 		"jest-preset-angular": "8.2.1",
 		"material-design-icons": "^3.0.1",
-		"ngx-auth-firebaseui": "^4.4.0",
 		"prettier": "2.0.4",
 		"ts-jest": "26.1.4",
 		"ts-node": "~7.0.0",
